--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "Una sencilla api para mostrar un saludo",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node api/v1/server.js",
     "test": "echo \"No hay tests definidos\" && exit 0"
   },
+  "type": "module",
   "author": "Leroy Sotomayor",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^17.2.1"
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.17.1",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
